Bug 369665 - Impossible to modify the layout of the second screen
Summary: Impossible to modify the layout of the second screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-multiscreen (other bugs)
Version First Reported In: 5.7.95
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Aleix Pol
URL:
Keywords:
: 370411 370711 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-03 08:46 UTC by humufr
Modified: 2016-11-18 01:43 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
panels on different screen (2.00 MB, image/png)
2016-10-03 15:47 UTC, humufr
Details
plasmashellrc (1.21 KB, text/plain)
2016-10-04 12:40 UTC, humufr
Details
plasma-org.kde.plasma.desktop-appletsrc (66.12 KB, text/plain)
2016-10-04 12:44 UTC, humufr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description humufr 2016-10-03 08:46:33 UTC
I use to have multiple activity with different wallpaper and notes plasmoid (since it is not possible to have it per virtual desktop). I also have a second screen attach to my laptop. Each screen had a different wallpaper, notes, the toolbox removed etc. Thanks to "I have no idea what happen". I am now stuck with the default wallpaper for the second screen, all my notes disappeared and no possibility to remove the toolbox.

Reproducible: Always

Steps to Reproduce:
1. log on plasma 5
2. attached the second screen


Actual Results:  
default screen configuration

Expected Results:  
having access to my screen configuration and not the default one
Comment 1 David Edmundson 2016-10-03 11:03:33 UTC
I don't understand

Are you saying you do not have the option "configure desktop" on the second screen?
Comment 2 humufr 2016-10-03 13:10:52 UTC
No I have the option but no change are working. If I am modifying the wallpaper, the toolbox etc. It is coming back to the default configuration immediately. 

And I lost the notes I put on that second screen.
Comment 3 humufr 2016-10-03 15:46:53 UTC
In notice now that in reality it is most of my configuration which got completely screwed. I configure the top right corner to show the grid desktop but know that configuration is not available. There are also a really funny things with the unify desktop option which unify the desktop but not using the main desktop (so all the panel are missing...). I killed systemsettings and restart it (to get my hand on it since I cannot navigate on the window another configuration wich is not working) and desunify the screens. The panels were one on one screen the other one on the second screen (see screenshot). Something is really buggy with plasma.
Comment 4 humufr 2016-10-03 15:47:34 UTC
Created attachment 101395 [details]
panels on different screen
Comment 5 humufr 2016-10-04 08:10:18 UTC
I found something extremely interesting and extremely weird. I notice that one of the change I made was removing the x86-video-intel driver. With that driver everything worked well and none of the problem I mention above present. The problems appeared when I removed this software. I reinstall it and indeed my whole plasma configuration is back as normal.

I removed again the x86 driver and problems are back. So yes it is reproducible.

In summary DRM driver and x86 driver does induce a different behaviour/management with plasma. 

I am going back now to my intel x86 driver.
Comment 6 David Edmundson 2016-10-04 10:11:54 UTC
>No I have the option but no change are working. If I am modifying the wallpaper, the toolbox etc. It is coming back to the default configuration immediately. 

Coming back to the default?
So do the settings apply and then revert? or do they simply not apply?

Can you also include your ~/.config/plasma-org.kde.plasma.desktop-appletsrc
Comment 7 David Edmundson 2016-10-04 10:12:35 UTC
and your ~/.config/plasamshellrc
Comment 8 humufr 2016-10-04 12:40:02 UTC
It is coming to the default one for the second screen: plasmoid and background not present and not modifiable.
Comment 9 humufr 2016-10-04 12:40:49 UTC
Created attachment 101407 [details]
plasmashellrc
Comment 10 humufr 2016-10-04 12:44:11 UTC
Created attachment 101408 [details]
plasma-org.kde.plasma.desktop-appletsrc
Comment 11 humufr 2016-10-04 12:47:45 UTC
Sorry I didn't answer properly in my commens 8:

If I am using the driver x86, I am coming back to my configuration for the second screen with my choice of wallpaper and plasmoid and I change change it if I want.

If I am using the kernel DRM driver (ie I am removing the x86 driver). My second screen is with the default KDE configuration for the wallpaper, toolbox etc.
Comment 12 Bhushan Shah 2016-10-10 05:16:55 UTC
It seems something is terribly wrong with your configuration and you seem to have 164 desktopcontainment (from plasma-org.kde.plasma.desktop-appletsrc.) I once managed to reproduce similar bug.. but after cleaning ~/.config/plasmashellrc and ~/.config/plasma-org.kde.plasma.desktop-appletsrc it worked for me.. I suggest to rename/backup those files and try again..
Comment 13 Marco Martin 2016-10-10 09:12:30 UTC
changing the driver it changed the screen connector names, so containments associated became invalid

i see in plasmashellrc that it believes there are 5 screens

the saved names are
0=DP1-2
1=eDP1
2=HDMI1
3=eDP-1
4=unknown

in there there are 2 versions of the same screens (called differently by the different drivers i guess) I don't know who "unknown" is tough.
this is kinda expected even if bad, but what it should happen would be just having a set of 2 different containments with the new drivers, that correctly save the settings.

what really shouldn't happen, is the fact that in appletsrc there are 152 containments associated with screen 3, looks like it's creating a new one on each startup, for some reason
Comment 14 Marco Martin 2016-10-10 09:18:03 UTC
how your screens are called in your systemsettings screen utility?
Comment 15 Marco Martin 2016-10-10 09:18:34 UTC
with both drivers version
Comment 16 humufr 2016-10-10 12:45:16 UTC
This is basically what I did. Removing the files and redo my configuration. I agree that the files are weird but I used only KDE tools to do the configurations. That means something happens which is, from your comments, not exactly expected.

As for the questions:

Driver x86-video-intel:

- eDP1
- DP1-2

for the DRM driver I have to restart my computer which I will do it later
Comment 17 Marco Martin 2016-10-10 14:19:43 UTC
reproduced and figured out what's goig on
https://phabricator.kde.org/D3006 will partly fix it (is as good as we can get it)
unfortunately the different driver changes screen names so non-primary screen containments will still get lost.

but with this, you should be able again to configure your wallpaper*and* should clean up too the problem that happened in appletsrc
Comment 18 humufr 2016-10-10 14:35:21 UTC
Good so it was not me and my stupid configuration but a real bug at least now you can think on a proper solution. Thanks.

Just to clarify:

> unfortunately the different driver changes screen names so non-primary screen containments will still get lost.

Does that means that if I have a second screen at home and another at work, the second screen will be different at every place? If yes that can become problematic for a lot of people. I know the workaround (no specific conf on the second screen) but for most of people the behavior will be weird.
Comment 19 Marco Martin 2016-10-10 14:53:46 UTC
Git commit ca1bf0e3e4c018127d2aac0a78a2e44385b76174 by Marco Martin.
Committed on 10/10/2016 at 14:53.
Pushed by mart into branch 'Plasma/5.8'.

fix screenForContainment when screen ids > count

Summary:
the check that was there, screen id not being more
than screen count is not valid anymore with the
screenpool approach, a screen id can be bigger than
the screen count in cases such as middle screen of a 3 screen
system disabled, or driver change (in which unfortunately,
connector names can change)
without this, a new containment was created for each startup.

Test Plan:
created a puroposefully corrupted plasmashellrc file,
where one known screen has a big number as id.
without patch a new containment is added in appletsrc each time
with the patch it behaves fine.

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3006

M  +4    -3    shell/shellcorona.cpp

http://commits.kde.org/plasma-workspace/ca1bf0e3e4c018127d2aac0a78a2e44385b76174
Comment 20 Marco Martin 2016-10-18 11:27:05 UTC
*** Bug 370711 has been marked as a duplicate of this bug. ***
Comment 21 Marco Martin 2016-10-18 12:03:35 UTC
*** Bug 370411 has been marked as a duplicate of this bug. ***
Comment 22 Morgan Cox 2016-10-19 14:14:21 UTC
Seems related to my bug

https://bugs.kde.org/show_bug.cgi?id=371207
Comment 23 Morgan Cox 2016-10-19 15:43:41 UTC
Is this bug going to be fixed in Kubuntu 16.10 ?
Comment 24 Christoph Feck 2016-11-18 01:43:51 UTC
*** Bug 370411 has been marked as a duplicate of this bug. ***